Committing "Spring Boot e Teste" fifth lesson

--- a/workspace/forum/src/main/resources/application-prod.properties
+++ b/workspace/forum/src/main/resources/application-prod.properties
@@ -29,3 +29,7 @@ info.app.java.version=@java.version@
 
 # spring boot admin server
 spring.boot.admin.client.url=http://localhost:8081
+
+
+
+server.port=${PORT}
